[package]
name = "etclient"
version = "0.1.0"
license = "Apache-2.0"
description = "A light client for Ethereum Classic built on top of SputnikVM and etcommon-worldstate storage."
authors = ["Wei Tang <hi@that.world>"]
repository = "https://github.com/ethereumproject/etclient"

[dependencies]
etclient-core = { path = "./core" }
dpt = { path = "../devp2p-rs/dpt" }
rlpx = { path = "../devp2p-rs/rlpx" }
etcommon-bigint = "0.1"
etcommon-crypto = "0.1"
etcommon-util = "0.1"
etcommon-rlp = "0.1"
devp2p-secp256k1 = "0.5"
rand = "0.3.12"
sha3 = "0.6"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"

[workspace]
members = [
  "./core"
]