[package]
name = "etclient"
version = "0.1.0"
license = "Apache-2.0"
description = "A light client for Ethereum Classic built on top of SputnikVM and etcommon-worldstate storage."
authors = ["Wei Tang <hi@that.world>"]
repository = "https://github.com/ethereumproject/etclient"

[dependencies]
devp2p = "0.2"
etcommon-bigint = "0.2"
etcommon-hexutil = "0.2"
etcommon-rlp = "0.2"
etcommon-block = "0.2"
etcommon-trie = "0.3"
sputnikvm = "0.6"
sputnikvm-stateful = "0.6"
secp256k1-plus = "0.5"
rand = "0.3.12"
sha3 = "0.6"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
url = "1.5.1"
env_logger = "0.3"
blockchain = "0.1"