[package]
name = "etclient"
version = "0.2.1"
license = "Apache-2.0"
description = "A light client for Ethereum Classic built on top of SputnikVM and etcommon-worldstate storage."
authors = ["Wei Tang <hi@that.world>"]
repository = "https://github.com/ethereumproject/etclient"

[dependencies]
devp2p = "0.3"
etcommon-bigint = "0.2"
etcommon-hexutil = "0.2"
etcommon-rlp = "0.2"
etcommon-block = "0.3"
etcommon-trie = "0.3"
etcommon-bloom = "0.2"
sputnikvm = "0.7"
sputnikvm-stateful = "0.7"
secp256k1-plus = "0.5"
rand = "0.3.12"
sha3 = "0.6"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
url = "1.5.1"
env_logger = "0.3"
blockchain = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ethash = "0.3"